12/09 add subtask_show/edit, maintask_show

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -5,3 +5,8 @@
           incomplete: "未完"
           done: "完了"
           deleted: "削除済み"
+      sub_task:
+        status:
+          incomplete: "未完"
+          done: "完了"
+          deleted: "削除済み"
