--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,12 +1,70 @@
  ja:
-    enums:
-      main_task:
-        status:
-          incomplete: "未完"
-          done: "完了"
-          deleted: "削除済み"
-      sub_task:
-        status:
-          incomplete: "未完"
-          done: "完了"
-          deleted: "削除済み"
+  enums:
+    main_task:
+      status:
+        incomplete: "未完"
+        done: "完了"
+        deleted: "削除済み"
+    sub_task:
+      status:
+        incomplete: "未完"
+        done: "完了"
+        deleted: "削除済み"
+ja:
+  date:
+    abbr_day_names:
+      - 日
+      - 月
+      - 火
+      - 水
+      - 木
+      - 金
+      - 土
+    abbr_month_names:
+      -
+      - 1月
+      - 2月
+      - 3月
+      - 4月
+      - 5月
+      - 6月
+      - 7月
+      - 8月
+      - 9月
+      - 10月
+      - 11月
+      - 12月
+    day_names:
+      - 日曜日
+      - 月曜日
+      - 火曜日
+      - 水曜日
+      - 木曜日
+      - 金曜日
+      - 土曜日
+    formats:
+      default: "%Y/%m/%d"
+      long: "%Y年%m月%d日(%a)"
+      short: "%m/%d"
+    month_names:
+      -
+      - 1月
+      - 2月
+      - 3月
+      - 4月
+      - 5月
+      - 6月
+      - 7月
+      - 8月
+      - 9月
+      - 10月
+      - 11月
+      - 12月
+
+  time:
+    am: 午前
+    formats:
+      default: "%Y年%m月%d日(%a) %H時%M分%S秒 %z"
+      long: "%Y/%m/%d %H:%M"
+      short: "%m/%d %H:%M"
+    pm: 午後
