--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -4,13 +4,14 @@ ja:
       user: ユーザー # view側： User.model_name.human => "ユーザ" / t("activerecord.models.user")と同じ
       category: カテゴリー
       main_task: メインタスク
+      sub_task: サブタスク
     attributes:
       user:
         id: ID
-        first_name: 名前 # view側： User.human_attribute_name :name => "名前" /　t("activerecord.attributes.user.name")と同じ
-        last_name: 姓
+        name: 名前
         email: メールアドレス
-        file: プロフィール画像
+        password: パスワード
+        encrypted_password: パスワード
         crypted_password: パスワード
         created_at: 作成日
         updated_at: 更新日
@@ -18,3 +19,6 @@ ja:
         category: カテゴリー
       main_task:
         main_task: メインタスク
+      sub_task:
+        sub_task: サブタスク
+        main_task: 関連メインタスク
